--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,16 @@
 
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 // Variables
-@import "variables";
+
+@import"variables";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import"node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+// default theme from byued template
+
+@import"theme";
+
+// another styles
