Gulp create font awesome

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,9 @@
 
 @import"node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+// font awesome
+@import"node_modules/font-awesome/css/font-awesome.min.css";
+
 // default theme from byued template
 
 @import"theme";
