Add to favorites from welcome page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13690,4 +13690,28 @@ img.mfp-img {
   font-size: 16px;
 }
 
+.favorites {
+  position: absolute;
+  right: 0;
+  top: 0;
+  min-height: 50px;
+  z-index: 999999;
+  padding: 25px;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.favorites:hover i, .favorites.active i {
+  color: #FA200A;
+}
+
+.favorites i {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 4rem;
+}
+
+.active i {
+  color: #FA200A;
+}
+
 /*# sourceMappingURL=app.css.map */
