--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import"node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // font awesome
+
 @import"node_modules/font-awesome/css/font-awesome.min.css";
 
 // default theme from byued template
@@ -19,4 +20,6 @@
 // another styles
 
 @import"hit";
+
+@import"favorites";
 
